Add smooth scrolling for head tracking

--- a/prototypes/EyeTrackingTest/EyeTrackingTest/Presets/PresetsCollectionViewCell.xib
+++ b/prototypes/EyeTrackingTest/EyeTrackingTest/Presets/PresetsCollectionViewCell.xib
@@ -18,7 +18,7 @@
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EcU-x6-E7b">
                     <rect key="frame" x="16" y="16" width="382" height="106"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
