--- a/prototypes/EyeTrackingTest/EyeTrackingTest/Presets/Presets.storyboard
+++ b/prototypes/EyeTrackingTest/EyeTrackingTest/Presets/Presets.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o9a-H9-8sT">
-                                <rect key="frame" x="0.0" y="76" width="414" height="786"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <connections>
                                     <segue destination="tLd-Nv-FYp" kind="embed" identifier="presetsCollectionViewSegue" id="2WL-rh-PPF"/>
                                 </connections>
@@ -29,7 +29,7 @@
                         <constraints>
                             <constraint firstItem="cbo-gc-I6d" firstAttribute="trailing" secondItem="o9a-H9-8sT" secondAttribute="trailing" id="7GD-6Y-TCL"/>
                             <constraint firstItem="cbo-gc-I6d" firstAttribute="bottom" secondItem="o9a-H9-8sT" secondAttribute="bottom" id="HSD-Di-6q8"/>
-                            <constraint firstItem="o9a-H9-8sT" firstAttribute="top" secondItem="cbo-gc-I6d" secondAttribute="top" constant="32" id="aVO-5e-gyj"/>
+                            <constraint firstItem="o9a-H9-8sT" firstAttribute="top" secondItem="cbo-gc-I6d" secondAttribute="top" id="aVO-5e-gyj"/>
                             <constraint firstItem="o9a-H9-8sT" firstAttribute="leading" secondItem="cbo-gc-I6d" secondAttribute="leading" id="w66-Wo-Mgn"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cbo-gc-I6d"/>
@@ -44,7 +44,7 @@
             <objects>
                 <collectionViewController storyboardIdentifier="PresetsCollectionViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="tLd-Nv-FYp" customClass="PresetsCollectionViewController" customModule="EyeTrackingTest" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="rOa-f3-qdv">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="786"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Yvg-iH-KbV" customClass="PresetsCollectionViewFlowLayout" customModule="EyeTrackingTest" customModuleProvider="target">
