--- a/EyeSpeak/Base.lproj/Main.storyboard
+++ b/EyeSpeak/Base.lproj/Main.storyboard
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="uec-WP-zZM">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="c4r-xL-h3L">
+    <device id="ipad12_9rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Configuration-->
         <scene sceneID="c0f-Tf-9XS">
             <objects>
-                <tableViewController id="oxU-O0-apE" customClass="ConfigurationListTableViewController" customModule="EyeSpeak" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="oxU-O0-apE" customClass="ConfigurationListTableViewController" customModule="Eyespeak" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="73t-RH-0JB">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="basicCell" textLabel="n4c-Bw-hdt" style="IBUITableViewCellStyleDefault" id="qdg-Qu-Hb9">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="1024" height="51.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qdg-Qu-Hb9" id="egj-Cy-9Ly">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="1024" height="51.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="n4c-Bw-hdt">
-                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                            <rect key="frame" x="20" y="0.0" width="984" height="51.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -52,12 +52,58 @@
             </objects>
             <point key="canvasLocation" x="-655" y="-179"/>
         </scene>
+        <!--Text Selection View Controller-->
+        <scene sceneID="IT7-v2-ZYb">
+            <objects>
+                <viewController id="c4r-xL-h3L" customClass="TextSelectionViewController" customModule="Eyespeak" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Zbe-IK-Tu3">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0ew-ci-Yec">
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="1346"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uXR-la-UwR">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="RuW-w2-BYT">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="eiO-oA-s8G">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="iwY-Fq-T2q" firstAttribute="trailing" secondItem="0ew-ci-Yec" secondAttribute="trailing" id="FCY-mi-gft"/>
+                            <constraint firstItem="0ew-ci-Yec" firstAttribute="top" secondItem="iwY-Fq-T2q" secondAttribute="top" id="ab0-H2-2ee"/>
+                            <constraint firstItem="iwY-Fq-T2q" firstAttribute="bottom" secondItem="0ew-ci-Yec" secondAttribute="bottom" id="kfu-Ob-Nfi"/>
+                            <constraint firstItem="0ew-ci-Yec" firstAttribute="leading" secondItem="iwY-Fq-T2q" secondAttribute="leading" id="wtR-Iz-Q1V"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="iwY-Fq-T2q"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="0ew-ci-Yec" id="Kqx-Bz-e6K"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EM5-kf-ba2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1729" y="-1552"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="Xhu-45-jeY">
             <objects>
                 <navigationController id="uec-WP-zZM" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aRA-bK-R4B">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -73,17 +119,17 @@
             <objects>
                 <viewController id="BV1-FR-VrT" customClass="ViewController" customModule="EyeSpeak" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DRc-YL-IXJ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="kdg-hA-5q5">
-                                <rect key="frame" x="20" y="84" width="335" height="563"/>
+                                <rect key="frame" x="20" y="70" width="984" height="1256"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="bjX-oB-sG1">
-                                        <rect key="frame" x="0.0" y="0.0" width="335" height="174.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="984" height="405.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z84-YO-ivB">
-                                                <rect key="frame" x="0.0" y="0.0" width="162.5" height="174.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="487" height="405.5"/>
                                                 <color key="backgroundColor" red="0.23261024746192893" green="0.23261024746192893" blue="0.23261024746192893" alpha="0.90461793664383561" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Button 1">
@@ -91,7 +137,7 @@
                                                 </state>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QM9-9U-RQj">
-                                                <rect key="frame" x="172.5" y="0.0" width="162.5" height="174.5"/>
+                                                <rect key="frame" x="497" y="0.0" width="487" height="405.5"/>
                                                 <color key="backgroundColor" red="0.23261024750000001" green="0.23261024750000001" blue="0.23261024750000001" alpha="0.90461793660000001" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Button 1">
@@ -101,10 +147,10 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="b9M-0n-HEk">
-                                        <rect key="frame" x="0.0" y="194.5" width="335" height="174"/>
+                                        <rect key="frame" x="0.0" y="425.5" width="984" height="405"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y2S-58-E4Q">
-                                                <rect key="frame" x="0.0" y="0.0" width="162.5" height="174"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="487" height="405"/>
                                                 <color key="backgroundColor" red="0.23261024746192893" green="0.23261024746192893" blue="0.23261024746192893" alpha="0.90461793664383561" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Button 2">
@@ -112,7 +158,7 @@
                                                 </state>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4dG-pa-5Bj">
-                                                <rect key="frame" x="172.5" y="0.0" width="162.5" height="174"/>
+                                                <rect key="frame" x="497" y="0.0" width="487" height="405"/>
                                                 <color key="backgroundColor" red="0.23261024750000001" green="0.23261024750000001" blue="0.23261024750000001" alpha="0.90461793660000001" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Button 2">
@@ -122,10 +168,10 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="2cx-lF-4rB">
-                                        <rect key="frame" x="0.0" y="388.5" width="335" height="174.5"/>
+                                        <rect key="frame" x="0.0" y="850.5" width="984" height="405.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CeT-TJ-IKd">
-                                                <rect key="frame" x="0.0" y="0.0" width="162.5" height="174.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="487" height="405.5"/>
                                                 <color key="backgroundColor" red="0.23261024746192893" green="0.23261024746192893" blue="0.23261024746192893" alpha="0.90461793664383561" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Button 3">
@@ -133,7 +179,7 @@
                                                 </state>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Khu-dj-nPG">
-                                                <rect key="frame" x="172.5" y="0.0" width="162.5" height="174.5"/>
+                                                <rect key="frame" x="497" y="0.0" width="487" height="405.5"/>
                                                 <color key="backgroundColor" red="0.23261024750000001" green="0.23261024750000001" blue="0.23261024750000001" alpha="0.90461793660000001" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Button 3">
