--- a/EyeSpeak/Base.lproj/Main.storyboard
+++ b/EyeSpeak/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="c4r-xL-h3L">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Jgy-U0-B1Z">
     <device id="ipad12_9rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
@@ -58,44 +58,67 @@
                     <view key="view" contentMode="scaleToFill" id="Zbe-IK-Tu3">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0ew-ci-Yec">
-                                <rect key="frame" x="0.0" y="0.0" width="1024" height="1346"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uXR-la-UwR">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="RuW-w2-BYT">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="eiO-oA-s8G" customClass="BorderedView" customModule="Eyespeak" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
-                        </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="iwY-Fq-T2q" firstAttribute="trailing" secondItem="0ew-ci-Yec" secondAttribute="trailing" id="FCY-mi-gft"/>
-                            <constraint firstItem="0ew-ci-Yec" firstAttribute="top" secondItem="iwY-Fq-T2q" secondAttribute="top" id="ab0-H2-2ee"/>
-                            <constraint firstItem="iwY-Fq-T2q" firstAttribute="bottom" secondItem="0ew-ci-Yec" secondAttribute="bottom" id="kfu-Ob-Nfi"/>
-                            <constraint firstItem="0ew-ci-Yec" firstAttribute="leading" secondItem="iwY-Fq-T2q" secondAttribute="leading" id="wtR-Iz-Q1V"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="iwY-Fq-T2q"/>
                     </view>
-                    <connections>
-                        <outlet property="collectionView" destination="0ew-ci-Yec" id="Kqx-Bz-e6K"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EM5-kf-ba2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1729" y="-1552"/>
+            <point key="canvasLocation" x="-2104" y="-1385"/>
+        </scene>
+        <!--Text Selection View Controller-->
+        <scene sceneID="wcZ-O0-4Me">
+            <objects>
+                <collectionViewController id="Jgy-U0-B1Z" customClass="TextSelectionViewController" customModule="Eyespeak" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="WCJ-8g-p1t">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jtp-ya-uaj">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="50" height="50"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="vns-g5-ZIP">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="xGV-Ud-5km">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </collectionViewCellContentView>
+                            </collectionViewCell>
+                        </cells>
+                        <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PresetPageControlView" id="m0H-ea-bEJ" customClass="PresetPageControlReusableView" customModule="Eyespeak" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="50" width="1024" height="50"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="3bW-mX-haI">
+                                    <rect key="frame" x="492.5" y="6.5" width="39" height="37"/>
+                                </pageControl>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="3bW-mX-haI" firstAttribute="centerY" secondItem="m0H-ea-bEJ" secondAttribute="centerY" id="AMN-MN-p9P"/>
+                                <constraint firstItem="3bW-mX-haI" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="m0H-ea-bEJ" secondAttribute="leading" id="Ips-DU-K2a"/>
+                                <constraint firstItem="3bW-mX-haI" firstAttribute="top" relation="greaterThanOrEqual" secondItem="m0H-ea-bEJ" secondAttribute="top" id="LFC-zb-qW9"/>
+                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="3bW-mX-haI" secondAttribute="bottom" id="jWJ-3u-lXL"/>
+                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="3bW-mX-haI" secondAttribute="trailing" id="taf-xB-9F7"/>
+                                <constraint firstItem="3bW-mX-haI" firstAttribute="centerX" secondItem="m0H-ea-bEJ" secondAttribute="centerX" id="y5b-i6-ita"/>
+                            </constraints>
+                            <connections>
+                                <outlet property="pageControl" destination="3bW-mX-haI" id="KNN-m2-s2h"/>
+                            </connections>
+                        </collectionReusableView>
+                        <connections>
+                            <outlet property="dataSource" destination="Jgy-U0-B1Z" id="hTf-Cv-Yij"/>
+                            <outlet property="delegate" destination="Jgy-U0-B1Z" id="qn0-m3-3r1"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yvH-BH-Lku" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1124" y="-1324"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Xhu-45-jeY">
