Initial UICollectionView integration with tracking system

--- a/EyeSpeak/Base.lproj/Main.storyboard
+++ b/EyeSpeak/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Jgy-U0-B1Z">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CvH-fK-txz">
     <device id="ipad12_9rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
@@ -11,8 +11,7 @@
         <!--Configuration-->
         <scene sceneID="c0f-Tf-9XS">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="owq-e8-MjY" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tableViewController id="oxU-O0-apE" customClass="ConfigurationListTableViewController" customModule="Eyespeak" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="oxU-O0-apE" customClass="ConfigurationListTableViewController" customModule="EyeSpeak" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="73t-RH-0JB">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -48,13 +47,79 @@
                         <segue destination="IvX-dq-8eZ" kind="show" identifier="sixKeyboard" id="7CA-qI-4qG"/>
                     </connections>
                 </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="owq-e8-MjY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-655" y="-179"/>
+        </scene>
+        <!--Tracking Container View Controller-->
+        <scene sceneID="6yK-JK-DQu">
+            <objects>
+                <viewController id="CvH-fK-txz" customClass="TrackingContainerViewController" customModule="EyeSpeak" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QoN-fl-FyW">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h77-DW-Ra2" userLabel="TrackingContainer">
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                                <connections>
+                                    <segue destination="Gya-9R-y3J" kind="embed" id="hQM-OQ-1Dc"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AQq-Gr-kNC" userLabel="ContentViewController">
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                                <connections>
+                                    <segue destination="Jgy-U0-B1Z" kind="embed" id="VGF-IP-CWi"/>
+                                </connections>
+                            </containerView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="86h-9O-qAY" customClass="UIVirtualCursorView" customModule="EyeSpeak" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="h77-DW-Ra2" firstAttribute="leading" secondItem="QoN-fl-FyW" secondAttribute="leading" id="2vi-F0-7jD"/>
+                            <constraint firstItem="h77-DW-Ra2" firstAttribute="top" secondItem="QoN-fl-FyW" secondAttribute="top" id="35q-ga-C7k"/>
+                            <constraint firstAttribute="trailing" secondItem="86h-9O-qAY" secondAttribute="trailing" id="9al-Da-z3Z"/>
+                            <constraint firstAttribute="bottom" secondItem="86h-9O-qAY" secondAttribute="bottom" id="O6y-97-a4l"/>
+                            <constraint firstItem="AQq-Gr-kNC" firstAttribute="top" secondItem="QoN-fl-FyW" secondAttribute="top" id="Pkw-eU-h0R"/>
+                            <constraint firstItem="AQq-Gr-kNC" firstAttribute="leading" secondItem="QoN-fl-FyW" secondAttribute="leading" id="aS7-NB-aKe"/>
+                            <constraint firstAttribute="bottom" secondItem="h77-DW-Ra2" secondAttribute="bottom" id="aiY-pn-mC3"/>
+                            <constraint firstAttribute="bottom" secondItem="AQq-Gr-kNC" secondAttribute="bottom" id="gjT-Qg-rfd"/>
+                            <constraint firstItem="86h-9O-qAY" firstAttribute="top" secondItem="QoN-fl-FyW" secondAttribute="top" id="ja5-K0-aCt"/>
+                            <constraint firstItem="86h-9O-qAY" firstAttribute="leading" secondItem="QoN-fl-FyW" secondAttribute="leading" id="m3d-Dk-0Lq"/>
+                            <constraint firstAttribute="trailing" secondItem="AQq-Gr-kNC" secondAttribute="trailing" id="oal-gs-OpX"/>
+                            <constraint firstAttribute="trailing" secondItem="h77-DW-Ra2" secondAttribute="trailing" id="tKc-EE-VNA"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="N6F-RO-WaJ"/>
+                    </view>
+                    <connections>
+                        <outlet property="cursorView" destination="86h-9O-qAY" id="gfO-Mh-Pd2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9OF-pV-I9m" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-824" y="-972"/>
+        </scene>
+        <!--Head Gaze View Controller-->
+        <scene sceneID="RBx-lz-Ojp">
+            <objects>
+                <viewController id="Gya-9R-y3J" customClass="UIHeadGazeViewController" customModule="EyeSpeak" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0FP-BP-SNo">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="GGj-AU-Ual"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BPb-7J-yob" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-8" y="-1352"/>
         </scene>
         <!--Text Selection View Controller-->
         <scene sceneID="wcZ-O0-4Me">
             <objects>
-                <collectionViewController id="Jgy-U0-B1Z" customClass="TextSelectionViewController" customModule="Eyespeak" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController id="Jgy-U0-B1Z" customClass="TextSelectionViewController" customModule="EyeSpeak" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="WCJ-8g-p1t">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -75,7 +140,7 @@
                                 </collectionViewCellContentView>
                             </collectionViewCell>
                         </cells>
-                        <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PresetPageControlView" id="m0H-ea-bEJ" customClass="PresetPageControlReusableView" customModule="Eyespeak" customModuleProvider="target">
+                        <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PresetPageControlView" id="m0H-ea-bEJ" customClass="PresetPageControlReusableView" customModule="EyeSpeak" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="50" width="1024" height="50"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
@@ -103,12 +168,11 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yvH-BH-Lku" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-172" y="-972"/>
+            <point key="canvasLocation" x="-8" y="-715"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
                 <viewController id="BV1-FR-VrT" customClass="ViewController" customModule="EyeSpeak" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DRc-YL-IXJ">
                         <rect key="frame" x="0.0" y="0.0" width="712" height="1006.9200564096436"/>
@@ -202,6 +266,7 @@
                         <outletCollection property="buttons" destination="Khu-dj-nPG" collectionClass="NSMutableArray" id="4Kz-qu-q6C"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="343" y="-179"/>
         </scene>
